resolves alignment issues in main navigation

--- a/assets/sass/modules/navigation/_main-navigation.scss
+++ b/assets/sass/modules/navigation/_main-navigation.scss
@@ -14,9 +14,14 @@
 
 		@include media($phone) {
 			@include margin(null auto);
+			@include padding(null #{$gutter});
 
 			display: block;
 			max-width: $container;
+		}
+
+		@include media($container) {
+			@include padding(0);
 		}
 
 		li {
